# AI-Learning-Coach-Autonomous-Multi-Agent-Personalized-Learning-System

./: ARCHITECTURE_DESIGN.md  README.md
backend/: Dockerfile  pyproject.toml
backend/src/agents/: graph.py
backend/src/agents/flows/: curriculum.py  evaluation.py  progress_tracking.py  skill_analysis.py  task_assignment.py
backend/src/api/: main.py
backend/src/api/v1/endpoints/: agents.py
backend/src/core/: config.py  database.py  llm.py  vector_store.py
backend/src/domain/models/: core.py
frontend/: Dockerfile  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/features/: ChatWindow.tsx
frontend/src/lib/: api.ts
infrastructure/: docker-compose.yml
